--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "bijou.js": "^8.2.0",
     "body-parser": "^1.19.0",
+    "connect-mongo": "^4.4.1",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-rate-limit": "^5.2.6",
+    "express-session": "^1.17.1",
+    "mongoose": "^5.12.7",
+    "morgan": "^1.10.0"
   }
 }
